--- a/VarshaWeb/Views/Shared/_Layout.cshtml
+++ b/VarshaWeb/Views/Shared/_Layout.cshtml
@@ -20,9 +20,9 @@
     <!--  Custom Scroll bar-->
     <link href="~/assets/plugins/mscrollbar/jquery.mCustomScrollbar.css" rel="stylesheet" />
 
-    <!--- Style css
+    <!--- Style css -->
     <link href="~/assets/css/style.css" rel="stylesheet">
-    <link href="~/assets/css/style-dark.css" rel="stylesheet"> -->
+    <link href="~/assets/css/style-dark.css" rel="stylesheet">
 
     <!---Skinmodes css-->
     <link href="~/assets/css/skin-modes.css" rel="stylesheet" />
