--- a/VarshaWeb/Views/EmployeeDashboard/Index.cshtml
+++ b/VarshaWeb/Views/EmployeeDashboard/Index.cshtml
@@ -19,6 +19,8 @@
 <!-- breadcrumb -->
 <!-- row -->
 
+
+
 <div class="breadcrumb-header justify-content-between">
     <div class="my-auto">
         <div class="d-flex">
@@ -51,6 +53,7 @@
                                 <th>Company</th>
                                 <th>Designation</th>
                                 <th>Department</th>
+                                <th>Action</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -59,18 +62,20 @@
                             {
                                 foreach (Emp_BasicInfoModels empinfo in (List<Emp_BasicInfoModels>)ViewBag.EmpList)
                                 {
-                            <tr>
-                                <td>@empinfo.FirstName</td>
-                                <td>@empinfo.EmpCode</td>
-                                <td>@empinfo.Designation</td>
-                                <td>@empinfo.Company</td>
-                                <td>
-                                    <div class="btn-icon-list">
-                                        <button class="btn btn-primary btn-icon" onclick="edit(@empinfo.ID)"><i class="far fa-edit"></i></button>
-                           
-                                    </div>
-                                </td>
-                            </tr>
+                                    <tr>
+                                        <td>@empinfo.FirstName</td>
+                                        <td>@empinfo.EmpCode</td>
+                                        <td>@empinfo.Designation</td>
+                                        <td>@empinfo.Company</td>
+                                        <td>
+
+                                            <div class="btn-icon-list">
+                                                <button class="btn btn-info btn-icon" onclick="ViewEmployee(@empinfo.ID)"><i class="far fa-eye"></i></button>
+
+                                            </div>
+                                        </td>
+
+                                    </tr>
 
                                 }
                             }
@@ -91,14 +96,17 @@
        <script src="~/Scripts/Angular/EmployeeManagement/DAL/DAL.js"></script>
        <script src="~/Scripts/Angular/EmployeeManagement/JS/ViewEmployee.js"></script>
 
-       <script src="~/Scripts/Angular/EmployeeManagement/Services/ViewEmployeeServices.js"></script>
+
        <!--Dashboard Code End-->
     <!-- Internal Data tables -->
+
     <script src="~/assets/plugins/datatable/js/jquery.dataTables.min.js"></script>
     <script src="~/assets/plugins/datatable/js/dataTables.dataTables.min.js"></script>
     <script src="~/assets/plugins/datatable/js/dataTables.responsive.min.js"></script>
     <script src="~/assets/plugins/datatable/js/responsive.dataTables.min.js"></script>
     <script src="~/assets/plugins/datatable/js/jquery.dataTables.js"></script>
+
+
     <script src="~/assets/plugins/datatable/js/dataTables.bootstrap4.js"></script>
     <script src="~/assets/plugins/datatable/js/dataTables.buttons.min.js"></script>
     <script src="~/assets/plugins/datatable/js/buttons.bootstrap4.min.js"></script>
@@ -110,6 +118,16 @@
     <script src="~/assets/plugins/datatable/js/buttons.colVis.min.js"></script>
     <script src="~/assets/plugins/datatable/js/dataTables.responsive.min.js"></script>
     <script src="~/assets/plugins/datatable/js/responsive.bootstrap4.min.js"></script>
+    <script src="~/Scripts/Angular/EmployeeManagement/DAL/CommonJs.js"></script>
+    <script>
+        function ViewEmployee(CurrentID) {
+
+            document.cookie = "ViewEmployeeID=" + CurrentID;
+
+            Pageredirect("/EmployeeDashboard/EmployeeDetails");
+
+        }
+    </script>
 
     <script>
         $('#Employeetable').DataTable({
