--- a/VarshaWeb/Views/EmployeeDashboard/Index.cshtml
+++ b/VarshaWeb/Views/EmployeeDashboard/Index.cshtml
@@ -30,7 +30,8 @@
 </div>
 <!-- breadcrumb -->
 <!-- row -->
-<div class="row">
+
+<div class="row" ng-app="EmployeeApp" ng-controller="EmployeeController">
     <div class="col-xl-12 col-lg-12">
         <!--Dashboard Code start-->
         <div class="card mg-b-20">
@@ -38,7 +39,7 @@
                 <div class="card-body">
                     <div class=" row-sm text-center">
                         <div class="col-sm-6 col-md-2 mg-t-10 float-right">
-                            <button class="btn btn-info btn-block" href="~/">Add Employee</button>
+                            <button class="btn btn-info btn-block" ng-click="addEmployee()">Add Employee</button>
                         </div>
                     </div>
                 </div>
@@ -64,9 +65,9 @@
                                 {
                                     <tr>
                                         <td>@empinfo.FirstName</td>
-                                        <td>@empinfo.EmpCode</td>
-                                        <td>@empinfo.Designation</td>
                                         <td>@empinfo.Company</td>
+                                        <td>@empinfo.Designation</td>
+                                        <td>@empinfo.Department</td>
 
                                         <td>
 
@@ -116,8 +117,9 @@
     <script src="~/assets/plugins/datatable/js/buttons.colVis.min.js"></script>
     <script src="~/assets/plugins/datatable/js/dataTables.responsive.min.js"></script>
     <script src="~/assets/plugins/datatable/js/responsive.bootstrap4.min.js"></script>
-   
 
+    <script src="~/Scripts/Angular/EmployeeManagement/Services/EmployeeRequestServices.js"></script>
+    <script src="~/Scripts/Angular/EmployeeManagement/JS/EmployeeRequest.js"></script>
     <script type="text/javascript">
 
         function ViewEmployee(CurrentID) {
@@ -128,13 +130,13 @@
 
         }
 
-         function EditEmployee(empid) {
-              
-              document.cookie = "EditEmployeeID=" + empid;
+        function EditEmployee(empid) {
 
-              Pageredirect("/EmployeeDashboard/EmployeeEdit");
+            document.cookie = "EditEmployeeID=" + empid;
 
-          }
+            Pageredirect("/EmployeeDashboard/EmployeeEdit");
+
+        }
         $('#Employeetable').DataTable({
 
             responsive: true,
@@ -146,6 +148,8 @@
         });
 
     </script>
+
+
 
 
 }
